asteria/core/tests/errors/elaboration_errors/declared_term_name_not_in_scope_hint_no_term_names_in_scope.asteriacore
f : forall {a : Type}. a
  = Test$x
  ;;
